--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pip install ipynb\n",
+    "#! pip install ipynb\n",
+    "#! pip install matplotlib\n",
     "from ipynb.fs.full.deck_visualization import visualize_deck as vd"
    ]
   },
@@ -251,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
