Refactor visualize_deck function to improve execution count and add documentation

--- a/deck_visualization.ipynb
+++ b/deck_visualization.ipynb
@@ -13,15 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This function requires at least 2 rows!\n",
+    "# If we want to visualize a single row, we can pass it as a list of lists (right now)\n",
+    "# visualize_deck([deck])\n",
+    "\n",
     "def visualize_deck(deck):\n",
+    "    deck = deck[::-1]\n",
+    "\n",
+    "    # Default values\n",
     "    gap = 0.1\n",
     "    card_width = 0.5\n",
     "    card_height = 0.5\n",
-    "    \n",
     "    total_width = len(deck[0]) * (card_width + gap) - gap\n",
     "    total_height = len(deck) * (card_height + gap) - gap\n",
     "    \n",
