--- a/main.ipynb
+++ b/main.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "#! pip install ipynb\n",
     "#! pip install matplotlib\n",
-    "from ipynb.fs.full.deck_visualization import visualize_deck as vd"
+    "from ipynb.fs.full.deck_visualization import visualize_deck as vd\n", 
     "import random, copy"
    ]
   },
