--- a/jigsaw.ipynb
+++ b/jigsaw.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,15 +359,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "a = [\n",
-    "    [{\"number\": i, \"color\": \"white\"} for i in range(1, 10)],\n",
     "    [{\"number\": i, \"color\": \"cornsilk\"} for i in range(1, 10)],\n",
     "    [{\"number\": i, \"color\": \"lightsalmon\"} for i in range(1, 10)],\n",
     "    [{\"number\": i, \"color\": \"lightskyblue\"} for i in range(1, 10)],\n",
+    "    [{\"number\": i, \"color\": \"white\"} for i in range(1, 10)],\n",
     "]"
    ]
   },
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
     "    for i in range(0, 9):\n",
     "        row = [{\"number\": x[\"number\"], \"color\": \"white\"} for x in deck[i]]\n",
     "        checker = copy.deepcopy(a)\n",
-    "        checker = checker[0]\n",
+    "        checker = checker[3]\n",
     "        if not unique(row, checker):\n",
     "            print(\"Duplicate number in row\")\n",
     "            print(row)\n",
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
     "    for i in range(0, 9):\n",
     "        col = [{\"number\": row[i][\"number\"], \"color\": \"white\"} for row in deck]\n",
     "        checker = copy.deepcopy(a)\n",
-    "        checker = checker[0]\n",
+    "        checker = checker[3]\n",
     "        if not unique(col, checker):\n",
     "            print(\"Duplicate number in column\")\n",
     "            print(col)\n",
@@ -460,10 +460,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "blocks_by_color = [\"abc\", \"def\", \"ghi\"]\n",
+    "\n",
+    "def color_ver(deck):\n",
+    "    for i in range(0, 3):\n",
+    "        block = []\n",
+    "        for x in range(len(blocks)):\n",
+    "            if blocks[x] in blocks_by_color[i]:\n",
+    "                block.append(deck[x // len(deck)][x % len(deck)])\n",
+    "        checker = copy.deepcopy(a)\n",
+    "        checker = checker[i] + checker[i] + checker[i]\n",
+    "        if not unique(block, checker):\n",
+    "            print(\"Duplicate number in blocks\")\n",
+    "            print(block)\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "color_ver(deck)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -474,9 +503,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'number': ' ', 'color': 'cornsilk'}\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
