Added 3-block Verification Sub-protocol

--- a/jigsaw.ipynb
+++ b/jigsaw.ipynb
@@ -503,10 +503,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "blocks_by_color = [\"adg\", \"beh\", \"cfi\"]\n",
+    "\n",
+    "\n",
+    "def color_ver(deck):\n",
+    "    for i in range(0, 3):\n",
+    "        block = []\n",
+    "        for x in range(len(blocks)):\n",
+    "            if blocks[x] in blocks_by_color[i]:\n",
+    "                block.append(deck[x // len(deck)][x % len(deck)])\n",
+    "        checker = copy.deepcopy(a)\n",
+    "        checker = checker[0] + checker[1] + checker[2]\n",
+    "        if not unique(block, checker):\n",
+    "            print(\"Duplicate number in blocks\")\n",
+    "            print(block)\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "color_ver(deck)"
+   ]
   },
   {
    "cell_type": "markdown",
