Make Jigsaw Puzzle more appealing

--- a/jigsaw_visualization.ipynb
+++ b/jigsaw_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,10 +52,10 @@
     "\n",
     "            if prev_state != blocks[row_idx][i]:\n",
     "                # Draw a line to separate the blocks vertically between the cells\n",
-    "                ax.plot([x - 0.05, x - 0.05], [y + mini_line_length, y + card_height + mini_line_length], color='black', lw=2)\n",
+    "                ax.plot([x - 0.05, x - 0.05], [y + mini_line_length - 0.06, y + card_height + mini_line_length], color='black', lw=3)\n",
     "            if row_idx > 0:\n",
     "                if blocks[row_idx][i] != blocks[row_idx - 1][i]:\n",
-    "                    ax.plot([x + mini_line_length, x + card_width + mini_line_length], [y - 0.05, y - 0.05], color='black', lw=2)\n",
+    "                    ax.plot([x + mini_line_length - 0.06, x + card_width + mini_line_length], [y - 0.05, y - 0.05], color='black', lw=3)\n",
     "              \n",
     "            prev_state = blocks[row_idx][i]\n",
     "    plt.show()"
