Improving deck_visuals, and re-reading the files

--- a/deck_visualization.ipynb
+++ b/deck_visualization.ipynb
@@ -40,10 +40,16 @@
     "        y = row_idx * (card_height + gap)\n",
     "        for i, card in enumerate(row):\n",
     "            x = i * (card_width + gap)\n",
-    "            rect = Rectangle((x, y), card_width, card_height, color=card[\"color\"], ec=\"black\", lw=2)\n",
+    "            rect = Rectangle((x, y), card_width, card_height, color=card[\"color\"], ec=\"grey\", lw=2)\n",
     "            ax.add_patch(rect)\n",
     "            ax.text(x + card_width / 2, y + card_height / 2, str(card[\"number\"]), \n",
     "                    ha='center', va='center', fontsize=16, color='black')\n",
+    "\n",
+    "    if len(deck) == 9:        \n",
+    "        ax.plot([x + total_height, x - 9], [y - 1.25, y - 1.25], color='black', lw=2)\n",
+    "        ax.plot([x + total_height, x - 9], [y - 3.05, y - 3.05], color='black', lw=2)\n",
+    "        ax.plot([x - 3.05, x - 3.05], [y + total_width, y - 9], color='black', lw=2)\n",
+    "        ax.plot([x - 1.25, x - 1.25], [y + total_width, y - 9], color='black', lw=2)\n",
     "\n",
     "    plt.show()"
    ]
